# Bimberman

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix  res
src/: main.cpp
